update the builder to set each of the santizer flag individually, to reduce the confusion (at least a little)